--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,3 +166,13 @@ h4,
 .nuxt-link-exact-active {
   color: #57eeff !important;
 }
+.wmheading {
+  padding: 10px;
+  width: 100%;
+  background: #1a2730;
+  color: white;
+  text-align: center;
+}
+.wmheading a {
+  color: #379ba6;
+}
