--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,10 +20,17 @@ h5 {
   line-height: 1.35;
 }
 p,
+label,
+body,
+textarea,
+input,
 a {
   font-family: "Open Sans", sans-serif;
 }
-
+textarea,
+input {
+  font-size: 16px;
+}
 h1,
 .nuxt-content h1 {
   font-size: 3.1875em;
